Wordlist overflow hidden added due to ff bug

--- a/less/modules/wordlist.less
+++ b/less/modules/wordlist.less
@@ -1,5 +1,6 @@
 .wordlist-view {
 	background: @white;
+	overflow: hidden;
 	* {
 		-webkit-box-sizing: border-box;
 		   -moz-box-sizing: border-box;
